--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/moment": "^1.6.1",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "qrcode.vue": "^1.7.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
