--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@capacitor/core": "^4.7.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/moment": "^1.6.1",
-    "core-js": "^3.25.3",
-    "nuxt": "^2.15.8",
+    "core-js": "^3.29.0",
+    "html2pdf.js": "^0.10.1",
+    "nuxt": "^2.16.2",
     "qrcode.vue": "^1.7.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
