--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@capacitor/android": "^4.7.0",
+    "@capacitor/app": "^4.1.1",
     "@capacitor/cli": "^4.7.0",
     "@capacitor/core": "^4.7.0",
+    "@capacitor/filesystem": "^4.1.4",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/moment": "^1.6.1",
     "core-js": "^3.29.0",
